# event-driven-ai-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: integration.yml  tests.yml
ai_platform/: __init__.py
ai_platform/api/: main.py
ai_platform/events/: __init__.py  contracts.py  inbox.py  outbox.py  rabbitmq.py  retry.py  serialization.py
ai_platform/runtime/: __init__.py  production.py
ai_platform/storage/: __init__.py  jobs.py  postgres.py
ai_platform/vector/: __init__.py  qdrant.py
ai_platform/workers/: __init__.py  base.py  document_worker.py  embedding_worker.py  generation_worker.py
tests/: test_api.py  test_events.py  test_external_services.py  test_production_adapters.py  test_workers.py
