[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "event-driven-ai-platform"
version = "0.1.0"
description = "Event-driven backend architecture for asynchronous AI document processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
runtime = [
  "aio-pika>=9.4.0",
  "asyncpg>=0.30.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0"
]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]
all = [
  "aio-pika>=9.4.0",
  "asyncpg>=0.30.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "mypy>=1.11.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
include = ["ai_platform*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
